<resources>
    <string name="app_name">ATM</string>

    <!-- Boutons pour écran -->
    <string name="left_button_1">1</string>
    <string name="left_button_2">2</string>
    <string name="left_button_3">3</string>
    <string name="left_button_4">4</string>

    <string name="right_button_1">1</string>
    <string name="right_button_2">2</string>
    <string name="right_button_3">3</string>
    <string name="right_button_4">4</string>

    <!-- Pad digitale -->
    <string name="pad_button_0">0</string>
    <string name="pad_button_1">1</string>
    <string name="pad_button_2">2</string>
    <string name="pad_button_3">3</string>
    <string name="pad_button_4">4</string>
    <string name="pad_button_5">5</string>
    <string name="pad_button_6">6</string>
    <string name="pad_button_7">7</string>
    <string name="pad_button_8">8</string>
    <string name="pad_button_9">9</string>
    <string name="pad_button_valider">Valider</string>
    <string name="pad_button_effacer">Effacer</string>
    <string name="pad_button_annuler">Annuler</string>

    <!-- Password page -->
    <string name="password_page_title">Entre votre mot de passe</string>
    <string name="password_page_password_ok">Mot de passe Valide !</string>
    <string name="password_page_password_ko">Mot de passe Invalide !</string>

    <!-- Menu page -->
    <string name="menu_page_retrait">Retrait</string>
    <string name="menu_page_consulter">Consulter mes comptes</string>
    <string name="menu_page_relever_bancaire">Relever Bancaire</string>

    <!-- Cash withdrawal page -->
    <string name="retrait_page_10_euros">10 €</string>
    <string name="retrait_page_20_euros">20 €</string>
    <string name="retrait_page_30_euros">30 €</string>
    <string name="retrait_page_50_euros">50 €</string>
    <string name="retrait_page_70_euros">70 €</string>
    <string name="retrait_page_80_euros">80 €</string>
    <string name="retrait_page_100_euros">100 €</string>
    <string name="retrait_page_autre_montant">autre montant</string>

    <!-- Amount page -->

    <string name="amount_page_title">Saisissez un montant</string>

    <!-- bank statement page -->

    <string name="bank_statement_page__title">Saisissez un montant</string>

</resources>